# unsound

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build-dmg.yml
scripts/: bump-version.py
src/: App.css  App.tsx  Correctable.tsx  HistoryDrawer.tsx  MeetingSetup.tsx  Meetings.tsx  ModelManager.tsx  Onboarding.tsx  Overlay.tsx  SettingsSheet.tsx  Wave.tsx  api.ts  main.tsx  sections.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: decode_check.rs
src-tauri/icons/: icon.icns
src-tauri/src/: asr.rs  audio.rs  audiofile.rs  deliver.rs  diarize.rs  dictation.rs  frontapp.rs  hotkeys.rs  lib.rs  llm.rs  main.rs  meeting.rs  models.rs  permissions.rs  remote.rs  settings.rs  store.rs  stt.rs  syscapture.rs  tray.rs
