[package]
name = "unsound"
version = "0.4.1"
description = "Local dictation and cleanup - offline whisper + LLM"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "unsound_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.16.0"
llama-cpp-2 = "0.1.150"
cpal = "0.18.1"
rubato = "0.16"
futures-util = "0.3.32"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync"] }
reqwest = { version = "0.13.4", features = ["stream"] }
tauri-plugin-global-shortcut = "2"
enigo = "0.6.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"
llama-cpp-2 = { version = "0.1.150", features = ["metal"] }
macos-accessibility-client = "0.0.2"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
whisper-rs = { version = "0.16.0", features = ["metal"] }

